fixed the image resize handler in viper z-index issue. viper toolbar just needs a higer zindex

--- a/Css/viper_tools.ees.css
+++ b/Css/viper_tools.ees.css
@@ -7,7 +7,7 @@
 .fixedScroll .ViperTP-bar {
   position: fixed !important;
   top: 48px !important;
-  z-index: 98;
+  z-index: 1000;
   background-color: #EDEDED;
   border-bottom-width: 1px;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.05);
